--- a/index.html
+++ b/index.html
@@ -1,18 +1,43 @@
+<!-- בס'ד -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="css/main.css">
     <title>TravelTip</title>
 </head>
-<body>
-    <h1>TravelTip Starter</h1>
+<body class="main-layout">
+    <div class="basad">בס'ד</div>
+    <header class="main-header">
+        <h1>TravelTip</h1>
+        <form onsubmit="onSreach(event)" name="search">
+        <input name="search" type="search" placeholder="Enter Location">
+        <button  type="submit">Go</button>
+        <button onclick="onMyLocation()">My Location</button>
+    </form>
+   <div>Location <span class="pos-name"></span><button onclick="onCopyLocation()">Copy Location</button></div>
+</header>
+    <div class="map-container">
     <div id="map" style="width: 100%; height: 400px;"></div>
     <button onclick="onAddMarker()" class="btn-add-marker">Add Marker Specific Location</button>
     <button onclick="onGetUserPos()" class="btn-user-pos">Get User Position</button>
     <button onclick="onGetLocs()" class="btn-get-locs">Get Locations</button>
     <button onclick="onPanTo()"class="btn-pan">Pan Map to Tokyo</button>
-
+</div>
+    <div class="weather-container">weather-container</div>
+    <div class="locations-table">
+        <thead>
+            <th>id</th>
+            <th>name</th>
+            <th>lat</th>
+            <th>lng</th>
+            <th>weather</th>
+            <th>createdAt</th>
+            <th>updatedAt</th>
+        </thead>
+        <table class="table-body"></table>
+    </div>
     <p>You are at: <span class="user-pos"></span></p>
     <p>Locations: 
         <pre class="locs"></pre>
