--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             <th>createdAt</th>
             <th>updatedAt</th>
         </thead>
-        <table class="table-body"></table>
+        <table class="table-body">
+       
+        </table>
     </div>
     <p>You are at: <span class="user-pos"></span></p>
     <p>Locations: 
