--- a/index.html
+++ b/index.html
@@ -27,18 +27,17 @@
 </div>
     <div class="weather-container">weather-container</div>
     <div class="locations-table">
-        <thead>
+     <table> <table> <thead>
             <th>id</th>
             <th>name</th>
             <th>lat</th>
             <th>lng</th>
-            <th>weather</th>
             <th>createdAt</th>
             <th>updatedAt</th>
         </thead>
-        <table class="table-body">
+        <tbody class="table-body">
        
-        </table>
+        </tbody></table>
     </div>
     <p>You are at: <span class="user-pos"></span></p>
     <p>Locations: 
