--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="basad">בס"ד</div>
     <header class="main-header">
         <h1>TravelTip</h1>
-        <form onsubmit="onSreach(event)" name="search">
+        <form onsubmit="onSearch(event)" name="search">
             <input name="search" type="search" placeholder="Enter Location">
             <button type="submit">Go</button>
             <button onclick="onMyLocation()">My Location</button>
